# netfuzz

./: .deepsource.toml  .gitignore  Dockerfile  README.md  build.txt  docker-compose.yml  ftpd.group  ftpd.passwd  lint.sh  main.yml  monkeytype.sqlite3  poetry.toml  proftpd.conf  proftpd.csv  pyproject.toml  requirements.txt  run.sh  setup-dev.sh  setup.sh  tests.sh
.cov/: coverage.b5766396ebaf.30941.XjlpmDUx
.devcontainer/: devcontainer.json
.github/: codecov.yml  docs.yml
.github/workflows/: docker.yml  lint.yml  lock.yml  pending-author-response.yml  releases.yml  tests.yml
input/ftp/: download.pcap  download_bin.pcap  site.pcap  upload.pcap
netfuzz/: __init__.py  main.py
netfuzz/boofuzz-results/: run-2024-08-08T16-22-08.db
netfuzz/core/: __init__.py  base.py  engine.py  fuzzer.py
netfuzz/protocol/: __init__.py  ftp.py  ftp_back1.py  ftp_back2.ini
netfuzz/protocols/: __init__.py  ftp.py  strategy.py
netfuzz/utils/: __init__.py  log.py
tests/: __init__.py  test_ftp.py
